--- a/yalta/xn--80afufmnqf3i.xn--c1acljkkgk2a2f.online/src/index.html
+++ b/yalta/xn--80afufmnqf3i.xn--c1acljkkgk2a2f.online/src/index.html
@@ -3,10 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="description" content="крым" />
+    <meta name="description" content="ялтинский округ" />
     <meta
       name="keywords"
-      content="крым, республика крым, что посмотреть в крыму, красивые места крым"
+      content="ялта, погода в ялте, ялта официальный, ялта интурист, достопримечательности ялты, 
+  береговое крым, береговое, погода в береговом, береговое отели, отдых в береговом, береговое ялта, beregovoie,
+  гаспра крым, гаспра, погода в гаспре, гаспра отели, отдых в гаспре, гаспра ялта,
+  голубой залив крым, голубой залив, погода в голубой заливе, голубой залив отели, отдых в голубой заливе, голубой залив ялта, simeiz, simeis,
+  гурзуф крым, гурзуф, погода в гурзуфе, гурзуф отели, отдых в гурзуфе, гурзуф ялта,
+  кацивели крым, кацивели, погода в кацивелие, кацивели отели, отдых в кацивелие, кацивели ялта, katsiveli,
+  кориез, погода в кориезе, кориез отели, отдых в кориезе, кориез ялта, олива, погода в оливе, олива отели, отдых в оливае, олива ялта,
+  оползневое крым, оползневое, погода в оползневом, оползневое отели, отдых в оползневом, оползневое ялта, opolznevoye, simeis,
+  парковое, погода в парковом, парковое отели, отдых в парковом, парковое ялта, форос, погода в фаросе, форос крым, форос официально, форос сайт, фороская церковь"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Гид по Крыму</title>
@@ -344,15 +352,15 @@
               <article class="card" id="card">
                 <div class="media-container" id="media-container">
                   <img
-                    src="./img/республика крым.jpg"
-                    alt="республика крым"
+                    src="./img/гоялта.jpeg"
+                    alt="ГО Ялта"
                     class="card__img"
                   />
                 </div>
                 <div class="card__main">
-                  <h1 class="card__name">Республика Крым, РФ</h1>
+                  <h1 class="card__name">Ялтинский округ</h1>
                   <p class="card__description">
-                    Республика Крым, Российская Федерация
+                    Ялта, Республика Крым
                   </p>
                 </div>
 
@@ -365,7 +373,7 @@
                     <!-- МЕНЯЕМ (вставляем навигатор) -->
                     <li class="nav__item">
                       <a
-                        href="https://yandex.ru/maps?rtext=44.605841%2C33.521634~45.389200%2C33.993751&rtt=pd"
+                        href="https://yandex.ru/maps/-/CDe~INkz"
                         target="_blank"
                         ><img src="./img/icons/маршрут синий.png" alt=""
                       /></a>
@@ -380,8 +388,8 @@
                     <li
                       class="nav__item"
                       id="playVideo"
-                      data-src="527Wr2LOZec"
-                      data-title="Республика Крым"
+                      data-src="IzwoWcIback"
+                      data-title="ялтинский округ"
                     >
                       <img src="./img/icons/видеоплеер синий.png" alt="" />
                     </li>
@@ -399,12 +407,10 @@
                   </div>
                   <div class="card__info_text" id="container">
                     <section id="main" class="info-text__section" id="toMain">
-                      <h3>Республика Крым</h3>
+                      <h3>Городской округ Ялта </h3>
                       <p>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing
-                        elit. Officia numquam soluta harum quisquam optio porro
-                        et molestiae quidem eligendi, voluptatibus ipsam. Non
-                        eaque porro odio odit. Minus labore ipsum quod.
+                        Городской округ Ялта (укр. міський округ Ялта, крымскотат. Yalta şeer bölgesi, Ялта шеэр больгеси) — муниципальное образование в составе Республики Крым Российской Федерации. 
+                    Образован на территории административно-территориальной единицы Республики Крым города республиканского значения Ялта с подчинённой ему территорией
                       </p>
                     </section>
                     <section
